--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,45 +2,64 @@
 	font-size: 100px;
 	text-align: center;
 	color: white;
+	padding: 10% 2% 15% 2%;
+}
+
+.navbar{
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	height: 10%;  
+	display: inline-block;
+	background-color: #2d2d2d;
+	padding: 0% 2% 1%% 0%; 
+	text-decoration: none;
 }
 
 .sprakBilde{
-	position: fixed;
-	right: 5%;
+	position: absolute;
+	right: 5%;    
 	top: 10%;
 }
 
-.bakgrunn1{
-	top: 1000px;
-	display: block;
-	
-	
-	background-color: white;
-
-}
-
-.bakgrunn2{
-	display: block;
-	
-	background-color: white;
-}
-
-.bakgrunn3{
-	top: ;
-	display: block;
-	
-}
 
 .tekstboks1{
+	background-color: #2d2d2d;
+	color: white;
+	padding: 20% 5% 20% 5%;
+	display: block;
+}
+
+.bakgrunn1{
+	background-color: white;
 
 }
 
 .tekstboks2{
+	color: white;
+	padding: 20% 5% 20% 5%;
+	display: block;
+}
+
+.bakgrunn2{
+	background-color: white;
 
 }
 
+.tekstboks3{
+	background-color: #2d2d2d;
+	color: white;
+	padding: 20% 5% 20% 5%;
+	display: block;
+}
+
 body{
-	background-color: black;	
+	background-color: #2a3449;	
+}
+
+li{
+	display: inline-block;
+	text-decoration: none;
 }
 
 
@@ -54,7 +73,7 @@ body{
 }
 
 .sprakBilde{
-	position: fixed;
+	position: absolute;
 	right: 5%;
 	top: 10%;
 }
@@ -62,7 +81,7 @@ body{
 .bakgrunn1{
 	display: block;
 	background-color: white;
-	height: 200px;
+	height: fit-content;
 
 }
 
