--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,6 @@
-﻿.overskrift1{
+﻿
+
+.overskrift1{
 	font-size: 100px;
 	text-align: center;
 	color: white;
@@ -12,7 +14,7 @@
 	height: 10%;  
 	display: inline-block;
 	background-color: #2d2d2d;
-	padding: 0% 2% 1%% 0%; 
+	padding: 0% 2% 5%% 0%; 
 	text-decoration: none;
 }
 
