--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 .overskrift1{
 	font-size: 100px;
 	text-align: center;
-	color: white;
+	color: black;
 	padding: 10% 2% 15% 2%;
 }
 
@@ -24,9 +24,27 @@
 	top: 10%;
 }
 
+.knapp{
+	position: absolute;
+	right: 10%;
+	top: 5%;
+}
+
+#btnStyle{
+	height: 65px;
+	width: 100px;
+	color: white;
+	font-weight: bold;
+	font-size: 20px;
+	background-color: #2d2d2d;
+	border-style: solid;
+	border-radius: 10px;
+	border-color: white;
+}
+
 
 .tekstboks1{
-	background-color: #2d2d2d;
+	background-color: black;
 	color: white;
 	padding: 20% 5% 20% 5%;
 	display: block;
@@ -38,6 +56,7 @@
 }
 
 .tekstboks2{
+	background-color: #2d2d2d;
 	color: white;
 	padding: 20% 5% 20% 5%;
 	display: block;
@@ -49,14 +68,23 @@
 }
 
 .tekstboks3{
-	background-color: #2d2d2d;
+	background-color: #2a3449;
 	color: white;
 	padding: 20% 5% 20% 5%;
 	display: block;
 }
 
+.footer{
+	height: 50%;
+	width: 100%;
+	color: white;
+	background-color: black;
+	padding: 5% 5% 5% 5%;
+	margin: 0% 0% 0% 0%;
+}
+
 body{
-	background-color: #2a3449;	
+	background-color: white;	
 }
 
 li{
