--- a/stylesheet_alternativt.css
+++ b/stylesheet_alternativt.css
@@ -3,7 +3,8 @@
 .overskrift1{
 	font-size: 100px;
 	text-align: center;
-	color: black;
+	color: yellow;
+	background-color: black;
 	padding: 10% 2% 15% 2%;
 }
 
@@ -13,14 +14,14 @@
 	width: 100%;
 	height: 10%;  
 	display: inline-block;
-	background-color: green;
+	background-color: ;
 	padding: 0% 2% 1% 0%; 
 	text-decoration: none;
 }
 
 .sprakBilde{
 	position: absolute;
-	right: 5%;    
+	right: 3%;    
 	top: 10%;
 }
 
@@ -33,32 +34,36 @@
 #btnStyle{
 	height: 65px;
 	width: 100px;
-	color: white;
+	color: yellow;
 	font-weight: bold;
 	font-size: 20px;
-	background-color: green;
+	background-color: black;
 	border-style: solid;
+	border: 10px 10px 10px 10px;
 	border-radius: 10px;
-	border-color: white;
+	border-color: yellow;
 }
 
 
 .tekstboks1{
 	background-color: black;
-	color: white;
+	color: yellow;
 	padding: 20% 5% 20% 5%;
 	display: block;
 	margin: 0;
+	border-bottom:12px;
+	border-bottom-style:solid; 
+	border-bottom-color:  yellow;
 }
 
 .bakgrunn1{
-	background-color: white;
+	background-color: black;
 
 }
 
 .tekstboks2{
-	background-color: blue;
-	color: white;
+	background-color: black;
+	color: yellow;
 	padding: 20% 5% 20% 5%;
 	display: block;
 	margin:0;
@@ -70,8 +75,8 @@
 }
 
 .tekstboks3{
-	background-color: green;
-	color: white;
+	background-color: black;
+	color: yellow;
 	padding: 20% 5% 20% 5%;
 	display: block;
 	margin: 0;
@@ -80,7 +85,7 @@
 .footer{
 	height: 50%;
 	width: 100%;
-	color: white;
+	color: yellow;
 	background-color: black;
 	padding: 5% 5% 5% 5%;
 	margin: 0% 0% 0% 0%;
@@ -88,13 +93,16 @@
 }
 
 body{
-	background-color: white;
+	background-color: black;
 	margin: 0;	
 }
 
 li{
 	display: inline-block;
 	text-decoration: none;
+}
+p{
+	font
 }
 
 
