--- a/stylesheet_alternativt.css
+++ b/stylesheet_alternativt.css
@@ -14,7 +14,7 @@
 	width: 100%;
 	height: 10%;  
 	display: inline-block;
-	background-color: ;
+	background-color: #2d2d2d;
 	padding: 0% 2% 1% 0%; 
 	text-decoration: none;
 }
@@ -42,7 +42,7 @@
 	color: yellow;
 	font-weight: bold;
 	font-size: 20px;
-	background-color: black;
+	background-color: #2d2d2d;
 	border-style: solid;
 	border: 10px 10px 10px 10px;
 	border-radius: 10px;
