--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-﻿
+
 
 .overskrift1{
 	font-size: 100px;
@@ -127,15 +127,16 @@ a{
 }
 
 .sprakBilde{
-	position: fixed;
-	right: 15%;    
-	top: 13%;
+	position: absolute;
+	right: 0%;    
+	top: 19%;
+	height: 25px;
 }
 
 .knapp{
 	position: fixed;
-	right: 70%;
-	top: 16%;
+	right: 10%;
+	top: 2%;
 }
 
 #btnStyle{
@@ -194,7 +195,7 @@ a{
 	margin: 0% 0% 0% 0%;
 }
 
-.navbarmeny{
+ul{
 
 	visibility: hidden;
 }
