--- a/stylesheet_alternativt.css
+++ b/stylesheet_alternativt.css
@@ -36,19 +36,11 @@
 	top: 9%;
 }
 
-#btnStyle{
-	height: 65px;
-	width: 100px;
-	color: yellow;
-	font-weight: bold;
-	font-size: 20px;
-	background-color: #2d2d2d;
-	border-style: solid;
-	border: 10px 10px 10px 10px;
-	border-radius: 10px;
-	border-color: yellow;
+.styleKnapp{
+	width: 33%;
+	top: 9%;
+	right: 5%;
 }
-
 
 .tekstboks1{
 	background-color: black;
