--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,7 +87,7 @@
 	width: 100%;
 	color: white;
 	background-color: black;
-	padding: 5% 5% 5% 5%;
+	padding: 5% 0% 5% 0%;
 	margin: 0% 0% 0% 0%;
 	
 }
@@ -104,6 +104,7 @@ li{
 
 ol{
 	display: block;
+	text-align: center;
 }
 
 a{
