--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,28 @@
-﻿
+﻿table{
+
+
+	border-collapse: collapse;
+
+}
+
+td{
+	width: 14%;	
+		padding: 0% 0% 0% 2%;
+}
+
+.nabbar{
+	background-color: #2d2d2d;
+	position: fixed;
+	width: 100%;
+	height: 10%;
+	top: 0%;
+
+}
+
+td h1{
+	text-decoration: none;
+	color: white;
+}
 
 .overskrift1{
 	font-size: 100px;
@@ -25,7 +49,7 @@
 }
 
 .bildeKnapp{
-	width: 33%;
+	width: 60%;
 }
 
 .knapp{
@@ -35,7 +59,8 @@
 }
 
 .styleKnapp{
-	width: 33%;
+	padding-bottom: 2%;
+	width: 60%;
 	top: 9%;
 	right: 5%;
 }
