--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,13 @@
-﻿table{
+﻿div{
+	margin: 0% 0% 0% 0%;
+}
+
+table{
 	border-collapse: collapse;
+}
+
+nav span {
+  display: none;
 }
 
 .navbar{
@@ -7,7 +15,6 @@
 	position: fixed;
 	width: 100%;
 	height: 10%;
-
 }
 
 td{
@@ -17,7 +24,6 @@ td{
 
 td a{
 	width: 100%;
-
 }
 
 td h1{
@@ -29,35 +35,20 @@ td h1{
 	width: 60%;
 }
 
-.overskrift1{
-	font-size: 100px;
+
+
+
+
+
+.overskrift{
+	font-size: 1000%;
 	text-align: center;
-	color: black;
-	padding: 10% 2% 15% 2%;
+	background-color: white;
+	padding: 20% 5% 20% 5%;
+	display: block;
+	margin: 0;
 }
 
-nav select {
-  display: none;
-}
-
-
-/*
-#btnStyle{
-	height: 65px;
-	width: 100px;
-	color: white;
-	font-weight: bold;
-	font-size: 20px;
-	background-color: #2d2d2d;
-	border-style: solid;
-	border-radius: 10px;
-	border-color: white;
-}
-*/
-
-div{
-	margin: 0% 0% 0% 0%;
-}
 
 .tekstboks1{
 	background-color: black;
@@ -68,10 +59,6 @@ div{
 	font-size: 15px;
 }
 
-.bakgrunn1{
-	background-color: white;
-
-}
 
 .tekstboks2{
 	background-color: #2d2d2d;
@@ -81,10 +68,6 @@ div{
 	margin:0;
 }
 
-.bakgrunn2{
-	background-color: white;
-
-}
 
 .tekstboks3{
 	background-color: #2a3449;
@@ -92,10 +75,6 @@ div{
 	padding: 20% 5% 20% 5%;
 	display: block;
 	margin: 0;
-}
-
-.resizable{
-	font-size: 15px;
 }
 
 .footer{
@@ -136,60 +115,91 @@ html{
 	max-width: 100%;
 }
 
-span{
-  font-size:25px;
-  float:right;
-  display:block;
-  font-weight:bold;
-}
-
 
 /*For mobil-enheter */
 @media (max-width: 960px){
 
-nav table{
+nav div{
 	display: none; 
 }
-nav select{
+nav span{
 	display: inline-block; 
 }
 
-
 .navbar{
+	top: 0%;
+	background-color: #2d2d2d;
 	position: fixed;
-	top: 0px;
 	width: 100%;
-	height: 12%;  
-	display: inline-block;
-	background-color: #2d2d2d;
-	padding: 0% 0% 0% 0%; 
-	text-decoration: none;
+	height: 10%;
 }
 
-.sprakBilde{
 
+.dropdown{
 	position: fixed;
-	right: 0%;    
-	top: 9%
-
+	width: 100%;
+	height: 10%;
+	
 }
-
-.knapp{
-	position: fixed;
-	right: 5%;
-	top: 9%;
-}
-
-#btnStyle{
-	height: 65px;
-	width: 100px;
+.dropbtn{
+	top: 30px;
 	color: white;
-	font-weight: bold;
-	font-size: 20px;
-	background-color: #2d2d2d;
-	border-style: solid;
-	border-radius: 10px;
-	border-color: white;
+	width: 100%;
+	border:none;
+	display: inline;
+	}
+
+#limit{
+	margin-left: 49px;
+	max-height: 250px;
+	max-width: 160px;
+	
+}
+
+
+.dropbtn: hover, .dropbtn:focus{
+	background-color:#2980B9;
+}
+
+.dropdown-content{
+	margin-left: 49px;
+	display: none;
+	position: absolute;
+	min-width: 160px;	
+	z-index: 1;
+	background-color: rgb(204,204,204);
+    background-color: rgba(204,204,204,0.24);
+	}
+
+
+.dropdown-content a{
+	color: white;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	font-family: Verdana,Geneva,sans-serif;
+	}
+
+
+.dropdown-content a:hover {
+	background-color: #ddd ;
+	color: black;
+}
+
+
+.dropdown:hover .dropdown-content {
+	display:block;
+	}
+
+
+
+.overskrift{
+	font-size: 1000%;
+	text-align: center;
+	background-color: white;
+	padding: 20% 5% 20% 5%;
+	display: block;
+	margin: 0;
 }
 
 
@@ -199,12 +209,9 @@ nav select{
 	padding: 20% 5% 20% 5%;
 	display: block;
 	margin: 0;
+	font-size: 15px;
 }
 
-.bakgrunn1{
-	background-color: white;
-
-}
 
 .tekstboks2{
 	background-color: #2d2d2d;
@@ -214,10 +221,6 @@ nav select{
 	margin:0;
 }
 
-.bakgrunn2{
-	background-color: white;
-
-}
 
 .tekstboks3{
 	background-color: #2a3449;
@@ -226,6 +229,7 @@ nav select{
 	display: block;
 	margin: 0;
 }
+
 
 .footer{
 	height: 50%;
