--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,12 +14,13 @@ nav span {
 	background-color: #2d2d2d;
 	position: fixed;
 	width: 100%;
-	height: 10%;
+	height: auto;
 }
 
 td{
 	width: 13%;	
 	padding: 0% 2% 0% 2%;
+
 }
 
 td a{
@@ -29,6 +30,7 @@ td a{
 td h1{
 	text-decoration: none;
 	color: white;
+	text-align: center;
 }
 
 .knapp{
@@ -131,30 +133,25 @@ nav span{
 	background-color: #2d2d2d;
 	position: fixed;
 	width: 100%;
-	height: 10%;
+	height: auto;
 }
 
 
-.dropdown{
-	position: fixed;
+.knapp{
 	width: 100%;
-	height: 10%;
 	
 }
+.dropdown{
+	width: 100%;
+}
+
 .dropbtn{
-	top: 30px;
+	position: fixed;
+	top: 0%;
 	color: white;
-	width: 75%;
-	border:none;
+	width: 30%;
 	display: inline;
 
-	}
-
-#limit{
-	margin-left: 49px;
-	max-height: 250px;
-	max-width: 160px;
-	
 }
 
 
@@ -163,10 +160,9 @@ nav span{
 }
 
 .dropdown-content{
-	margin-left: 49px;
 	display: none;
 	position: absolute;
-	min-width: 160px;	
+	width: 100%;	
 	z-index: 1;
 	background-color: rgb(204,204,204);
     background-color: rgba(204,204,204,0.24);
@@ -189,8 +185,8 @@ nav span{
 
 
 .dropdown:hover .dropdown-content {
-	display:block;
-	}
+	display: block;
+}
 
 
 
