--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,6 +35,7 @@ td h1{
 
 .knapp{
 	width: 60%;
+	padding: 10%;
 }
 
 
@@ -143,16 +144,21 @@ nav span{
 }
 .dropdown{
 	width: 100%;
+	padding: 10%;
+	
 }
 
 .dropbtn{
 	position: fixed;
-	top: 0%;
+	margin-top: -6.5%;
 	color: white;
-	width: 30%;
+	width: 28%;
+	
 	display: inline;
+	
 
 }
+
 
 
 .dropbtn: hover, .dropbtn:focus{
@@ -161,11 +167,15 @@ nav span{
 
 .dropdown-content{
 	display: none;
-	position: absolute;
-	width: 100%;	
+	margin-top: 7.8%;
+	position: fixed;
+	width: 101%;
+	margin-left: -38.7%;	
 	z-index: 1;
-	background-color: rgb(204,204,204);
-    background-color: rgba(204,204,204,0.24);
+	background-color: #2d2d2d;
+	text-align: center;
+	
+    
 	}
 
 
@@ -185,7 +195,9 @@ nav span{
 
 
 .dropdown:hover .dropdown-content {
+	
 	display: block;
+	
 }
 
 
