--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,108 +1,16 @@
-﻿div{
-	margin: 0% 0% 0% 0%;
-}
-
-table{
-	border-collapse: collapse;
-}
-
-nav span {
-  display: none;
-}
-
-.navbar{
-	background-color: #2d2d2d;
-	position: fixed;
-	width: 100%;
-	height: auto;
-}
-
-td{
-	width: 13%;	
-	padding: 0% 2% 0% 2%;
-
-}
-
-td a{
-	width: 100%;
-}
-
-td h1{
-	text-decoration: none;
-	color: white;
-	text-align: center;
-}
-
-.knapp{
-	width: 60%;
-	padding: 10%;
-}
-
-
-
-
-
-
-.overskrift{
-	font-size: 1000%;
-	text-align: center;
-	background-color: white;
-	padding: 20% 5% 20% 5%;
-	display: block;
-	margin: 0;
-}
-
-
-.tekstboks1{
-	background-color: black;
-	color: white;
-	padding: 20% 5% 20% 5%;
-	display: block;
-	margin: 0;
-	font-size: 15px;
-}
-
-
-.tekstboks2{
-	background-color: #2d2d2d;
-	color: white;
-	padding: 20% 5% 20% 5%;
-	display: block;
-	margin:0;
-}
-
-
-.tekstboks3{
-	background-color: #2a3449;
-	color: white;
-	padding: 20% 5% 20% 5%;
-	display: block;
-	margin: 0;
-}
-
-.footer{
-	height: 50%;
-	width: 100%;
-	color: white;
-	background-color: black;
-	padding: 5% 0% 5% 0%;
-	margin: 0% 0% 0% 0%;
-	
-}
+﻿/* For pc-skjermer */
 
 body{
 	background-color: white;
 	margin: 0;	
 }
 
-li{
-	display: inline-block;
-	text-decoration: none;
+div{
+	margin: 0% 0% 0% 0%;
 }
 
-ol{
-	display: block;
-	text-align: center;
+table{
+	border-collapse: collapse;
 }
 
 a{
@@ -119,12 +27,117 @@ html{
 }
 
 
+/* Ting til navbar */
+
+nav span {
+  display: none;
+}
+
+td{
+	width: 13%;	
+	padding: 0% 2% 0% 2%;
+}
+
+td a{
+	width: 100%;
+}
+
+td h1{
+	text-decoration: none;
+	color: white;
+	text-align: center;
+}
+
+.navbar{
+	background-color: #2d2d2d;
+	position: fixed;
+	width: 100%;
+	height: auto;
+}
+
+.knapp{
+	width: 60%;
+	padding: 10%;
+}
+
+
+/* Ting til innhold */
+
+.overskrift{
+	font-size: 1000%;	
+	text-align: center;
+	background-color: white;
+	padding: 20% 5% 20% 5%;
+	display: block;
+	margin: 0;
+}
+
+.tekstboks1{
+	background-color: black;
+	color: white;
+	padding: 20% 5% 20% 5%;
+	display: block;
+	margin: 0;
+	font-size: 15px;
+}
+
+.tekstboks2{
+	background-color: #2d2d2d;
+	color: white;
+	padding: 20% 5% 20% 5%;
+	display: block;
+	margin:0;
+}
+
+.tekstboks3{
+	background-color: #2a3449;
+	color: white;
+	padding: 20% 5% 20% 5%;
+	display: block;
+	margin: 0;
+}
+
+
+/* Ting til footer */
+
+.footer{
+	height: 50%;
+	width: 100%;
+	color: white;
+	background-color: black;
+	padding: 5% 0% 5% 0%;
+	margin: 0% 0% 0% 0%;
+}
+
+ol{
+	display: block;
+	text-align: center;
+}
+
+li{
+	display: inline-block;
+	text-decoration: none;
+}
+
+
+
+
+
 /*For mobil-enheter */
 @media (max-width: 960px){
+
+
+body{
+	background-color: black;
+}
+
+
+/* Ting til navbar */
 
 nav div{
 	display: none; 
 }
+
 nav span{
 	display: inline-block; 
 }
@@ -137,29 +150,24 @@ nav span{
 	height: auto;
 }
 
-
 .knapp{
-	width: 100%;
-	
+	width: 80%;
+	padding: 7%;
+	margin-left: 3%;	
 }
+
 .dropdown{
 	width: 100%;
 	padding: 10%;
-	
 }
 
 .dropbtn{
 	position: fixed;
-	margin-top: -6.5%;
+	margin-top: -5.8%;
 	color: white;
-	width: 28%;
-	
+	width: 23%;	
 	display: inline;
-	
-
 }
-
-
 
 .dropbtn: hover, .dropbtn:focus{
 	background-color:#2980B9;
@@ -173,11 +181,8 @@ nav span{
 	margin-left: -38.7%;	
 	z-index: 1;
 	background-color: #2d2d2d;
-	text-align: center;
-	
-    
-	}
-
+	text-align: center;   
+}
 
 .dropdown-content a{
 	color: white;
@@ -185,22 +190,19 @@ nav span{
 	text-decoration: none;
 	display: block;
 	font-family: Verdana,Geneva,sans-serif;
-	}
-
+}
 
 .dropdown-content a:hover {
 	background-color: #ddd ;
 	color: black;
 }
 
-
-.dropdown:hover .dropdown-content {
-	
-	display: block;
-	
+.dropdown:hover .dropdown-content {	
+	display: block;	
 }
 
 
+/* Ting til innhold */
 
 .overskrift{
 	font-size: 1000%;
@@ -211,7 +213,6 @@ nav span{
 	margin: 0;
 }
 
-
 .tekstboks1{
 	background-color: black;
 	color: white;
@@ -221,7 +222,6 @@ nav span{
 	font-size: 15px;
 }
 
-
 .tekstboks2{
 	background-color: #2d2d2d;
 	color: white;
@@ -229,7 +229,6 @@ nav span{
 	display: block;
 	margin:0;
 }
-
 
 .tekstboks3{
 	background-color: #2a3449;
@@ -240,6 +239,8 @@ nav span{
 }
 
 
+/* Ting til footer */
+
 .footer{
 	height: 50%;
 	width: 100%;
@@ -249,13 +250,10 @@ nav span{
 	margin: 0% 0% 0% 0%;
 }
 
-ul{
-
+ul{                                 /* ???????????????????????? */
 	visibility: collapse;
-
 }
 
-	body{
-		background-color: black;
-	}
-}
+
+
+
