--- a/stylesheet.css
+++ b/stylesheet.css
@@ -72,7 +72,7 @@ td h1{
 	margin: 0;
 }
 
-.tekstboks1{
+#tekstboks1{
 	background-color: black;
 	color: white;
 	padding: 20% 5% 20% 5%;
@@ -81,7 +81,7 @@ td h1{
 	font-size: 15px;
 }
 
-.tekstboks2{
+#tekstboks2{
 	background-color: #2d2d2d;
 	color: white;
 	padding: 20% 5% 20% 5%;
@@ -89,12 +89,16 @@ td h1{
 	margin:0;
 }
 
-.tekstboks3{
+#tekstboks3{
 	background-color: #2a3449;
 	color: white;
 	padding: 20% 5% 20% 5%;
 	display: block;
 	margin: 0;
+}
+
+button{
+	
 }
 
 
@@ -250,9 +254,7 @@ nav span{
 	margin: 0% 0% 0% 0%;
 }
 
-ul{                                 /* ???????????????????????? */
-	visibility: collapse;
-}
+
 
 
 
