--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,7 @@
 ﻿/* For pc-skjermer */
-
+* {
+    box-sizing: border-box;
+}
 body{
 	background-color: white;
 	margin: 0;	
@@ -73,6 +75,15 @@ td h1{
 	display: block;
 	margin: 0;
 }
+.right{
+    width: 50%;
+    float: left;
+    
+}
+.left{
+    width: 50%;
+    float: left;
+}
 
 #tekstboks1{
 	background-color: black;
@@ -94,13 +105,11 @@ td h1{
 #tekstboks3{
 	background-color: black;
 	color: white;
-}
-.tekstBakgrunn{
-	padding: 20% 5% 30% 5%;
+    padding: 20% 5% 30% 5%;
 	display: block;
-	margin: 0;
-	background-color: black;
+	margin:0;
 }
+
 
 #tekstboks4{
 	background-color: #2a3449;
@@ -108,6 +117,12 @@ td h1{
 	padding: 20% 5% 30% 5%;
 	display: block;
 	margin: 0;
+}
+.tekstBakgrunn{
+	padding: 20% 5% 30% 5%;
+	display: block;
+	margin: 0;
+	background-color: black;
 }
 
 button{
@@ -273,12 +288,15 @@ nav span{
 }
 
 #tekstboks4{
-	background-color: #2a3449;
+	
+}
+    .tekstboks40{
+    background-color: #2a3449;
 	color: white;
 	padding: 20% 5% 20% 5%;
 	display: block;
 	margin: 0;
-}
+    }
 
 button{
 	height: 50%;
