--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,7 +106,7 @@ td h1{
 }
 
 #tekstboks2{
-	background-color: #2a3449;
+	background-color: #444d5b;
 	color: white;
 	padding: 20% 5% 30% 5%;
 	display: block;
@@ -123,7 +123,7 @@ td h1{
 
 
 #tekstboks4{
-	background-color: #2a3449;
+	background-color: #444d5b;
 	color: white;
 	padding: 20% 5% 30% 5%;
 	display: block;
@@ -290,7 +290,7 @@ nav span{
 .left{
     width: 50%;
     float: left;
-    background-color: #2a3449;
+    background-color: #444d5b;
 	color: white;
 	padding: 20% 5% 20% 5%;
 	display: block;
@@ -307,7 +307,7 @@ nav span{
 }
 
 #tekstboks2{
-	background-color: #2a3449;
+	background-color: #444d5b;
 	color: white;
 	padding: 20% 5% 40% 5%;
 	display: block;
@@ -323,7 +323,7 @@ nav span{
 }
 
 #tekstboks4{
-	background-color: #2a3449;
+	background-color: #444d5b;
 	color: white;
 	padding: 20% 5% 20% 5%;
 	display: block;
