--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,7 +93,6 @@ td h1{
 	font-size: 15px;
 }
 
-
 .tekstboks2{
 	background-color: #2a3449;
 	color: white;
@@ -109,7 +108,22 @@ td h1{
 	display: block;
 	margin:0;
 }
-
+.tekstboks4{
+	background-color: #2a3449;
+	color: white;
+	padding: 20% 5% 30% 5%;
+	display: block;
+	margin: 0;
+}
+.gif{
+    width: 400px;
+    display: block;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 35.1px;
+    
+}
 /* ting til slideshow */
 
 .mineSider {
@@ -213,13 +227,7 @@ img {
 }
 
 
-.tekstboks4{
-	background-color: #2a3449;
-	color: white;
-	padding: 20% 5% 30% 5%;
-	display: block;
-	margin: 0;
-}
+
 .tekstBakgrunn{
 	padding: 20% 5% 30% 5%;
 	display: block;
@@ -233,6 +241,8 @@ img {
     grid-gap: 30px;
     
     padding: 10px;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 .grid-container > div {
    
@@ -434,9 +444,7 @@ nav span{
 .grid-container{
     display: hidden;
 }
-    .centerPic{
-        text-align: center;
-    }
+
 
 
 /* Ting til footer */
