siste for dagen

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,7 +90,7 @@ td h1{
 	padding: 20% 5% 30% 5%;
 	display: block;
 	margin: 0;
-	font-size: 15px;
+	
 }
 
 .tekstboks2{
@@ -115,36 +115,44 @@ td h1{
 	display: block;
 	margin: 0;
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: 100% 100%;
+    grid-gap: 30px;
+    
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+.grid-container > div {
+   
+    text-align: justify;
+    padding: 20px 20px;
+    font-size: 30px;
+    color: white;
+
+}
 .gif{
     width: 400px;
     display: block;
     margin-bottom: auto;
-    margin-left: auto;
+    
     margin-right: auto;
     margin-top: 35.1px;
+    border-radius: 10px;
     
+}
+
+#problemstilling{
+    text-align: left;
+}
+#skriftS{
+    font-size: 15px;
 }
 /* ting til slideshow */
-
-.mineSider {
-    display: none;
-    
-}
-
-img {
-    vertical-align: middle;
-    
-}
-
-
-.bildeshow-div {
-    width: 25%;
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-
 .forrige, .neste {
   cursor: pointer;
   position: absolute;
@@ -159,19 +167,14 @@ img {
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
-
-
 .neste {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-
 .forrige:hover, .neste:hover {
   background-color: rgba(0,0,0,0.8);
 }
-
-
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -181,8 +184,6 @@ img {
   width: 100%;
   text-align: center;
 }
-
-
 .nummertxt {
   color: #f2f2f2;
   font-size: 12px;
@@ -190,8 +191,6 @@ img {
   position: absolute;
   top: 0;
 }
-
-
 .dot {
   cursor: pointer;
   height: 15px;
@@ -202,25 +201,19 @@ img {
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
 .active .dot:hover {
   background-color: #717171;
 }
-
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
-
-
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
 }
-
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .forrige .neste .text {font-size: 11px}
@@ -234,24 +227,7 @@ img {
 	margin: 0;
 	background-color: black;
 }
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: 100% 100%;
-    grid-gap: 30px;
-    
-    padding: 10px;
-    padding-left: 15%;
-    padding-right: 15%;
-}
-.grid-container > div {
-   
-    text-align: justify;
-    padding: 20px 20px;
-    font-size: 30px;
-    color: white;
 
-}
 
 
 /* Ting til footer */
@@ -444,7 +420,21 @@ nav span{
 .grid-container{
     display: hidden;
 }
-
+.gif{
+    width: 250px;
+    display: block;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 35.1px;
+    border-radius: 10px;
+    
+}
+.appBilder{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
 
 
 /* Ting til footer */
