--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ li a{
 }
 
 p{
-	font-size: 15px;
+	font-size: 17px;
 }
 
 html{
@@ -85,6 +85,8 @@ td h1{
 }
 
 .tekstboks1{
+    
+    
 	background-color: black;
 	color: white;
 	padding: 20% 5% 30% 5%;
@@ -94,6 +96,7 @@ td h1{
 }
 
 .tekstboks2{
+    
 	background-color: #2a3449;
 	color: white;
 	padding: 20% 5% 30% 5%;
@@ -102,6 +105,7 @@ td h1{
 }
 
 .tekstboks3{
+    height: 950px;
 	background-color: black;
 	color: white;
     padding: 20% 5% 30% 5%;
@@ -109,6 +113,7 @@ td h1{
 	margin:0;
 }
 .tekstboks4{
+    height: 950px;
 	background-color: #2a3449;
 	color: white;
 	padding: 20% 5% 30% 5%;
@@ -124,19 +129,19 @@ td h1{
     
     padding-top: 10%;
     padding-bottom: 10%;
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 .grid-container > div {
    
-    text-align: justify;
+    text-align: left;
     padding: 20px 20px;
     font-size: 30px;
     color: white;
 
 }
 .gif{
-    width: 400px;
+    width: 70%;
     display: block;
     margin-bottom: auto;
     
@@ -150,7 +155,8 @@ td h1{
     text-align: left;
 }
 #skriftS{
-    font-size: 15px;
+    font-size: 17px;
+    padding-top: 10%
 }
 /* ting til slideshow */
 .forrige, .neste {
@@ -218,8 +224,22 @@ td h1{
 @media only screen and (max-width: 300px) {
   .forrige .neste .text {font-size: 11px}
 }
-
-
+#jsAppBilde{
+    display: none;
+}
+.noJsBilder{
+    
+    margin: auto;
+}
+#noJsBilde1{
+    
+}
+#noJsBilde2{
+    
+}
+#noJsBilde3{
+    
+}
 
 .tekstBakgrunn{
 	padding: 20% 5% 30% 5%;
