--- a/stylesheet.css
+++ b/stylesheet.css
@@ -263,13 +263,30 @@ td h1{
 
 /* Ting til footer */
 
+.grid-containerFooter{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: 100%;
+    grid-gap: 20px;
+    
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
+    }
+
+.grid-containerFooter > div{
+    text-align: center;
+    padding: 20px 20px;
+    font-size: 30px;
+    color: white;
+}
 .footer{
 	height: 50%;
 	width: 100%;
 	color: white;
 	background-color: #2d2d2d;
-	padding: 15% 0% 5% 0%;
-	margin: 0% 0% 0% 0%;
+	
 }
 
 ol{
@@ -282,7 +299,9 @@ li{
 	text-decoration: none;
 }
 
-
+.someKnapper{
+    width: auto;   
+}
 .someFB {
 	width: 20%;
 }
@@ -473,7 +492,9 @@ nav span{
 
 /* Ting til footer */
 
-
+.grid-containerFooter{
+        display: hidden;
+    }
 .footer{
 	height: 50%;
 	width: 100%;
@@ -482,6 +503,7 @@ nav span{
 	padding: 5% 0% 5% 0%;
 	margin: 0% 0% 0% 0%;
 }
+    
 
 .someFB {
 	width: 20%;
