--- a/stylesheet.css
+++ b/stylesheet.css
@@ -292,10 +292,10 @@ td h1{
     grid-template-rows: 100%; 
     grid-gap: 20px;
     
-    padding-top: 10%;
-    padding-bottom: 10%;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
     
 }
 
@@ -318,6 +318,7 @@ td h1{
 ul{
 	display: block;
 	text-align: center;
+    padding-left: 0;
 }
 
 li{
@@ -327,7 +328,7 @@ li{
 }
 
 .someKnapper{
-    padding-top: 30px;
+    padding-top: 35px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -338,12 +339,12 @@ li{
 
 .someInsta {
 	width: 34px;
-	margin-right: 3%;
+	
 }
 
 .someLinkedin {
 	width: 34px;
-	margin-right: 4%;
+	
 }
 
 .someTwitter {
@@ -548,12 +549,12 @@ nav span{
 
 .someInsta {
 	width: 34px;
-	margin-right: 3%;
+	
 }
 
 .someLinkedin {
 	width: 34px;
-	margin-right: 4%;
+	
 }
 
 .someTwitter {
