--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ table{
 
 a{
 	text-decoration: none;
-	font-family: helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
 li a{
@@ -35,12 +35,12 @@ li a{
 }
 
 p{
-	font-size: 17px;
+	font-size: 23px;
     line-height: 1.5;
 }
 
 html{
-	font-family: helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 	max-width: 100%;
 }
 
@@ -193,6 +193,11 @@ td h1{
     margin: auto;
 }
 
+#skriftSs{
+	font-size: 23px;
+	padding-top: 6%;
+}
+
 #skriftS{
     font-size: 17px;
     padding-top: 6%;
@@ -208,7 +213,12 @@ td h1{
 }
 #skriftS5{
     font-size: 17px;
-    
+}
+#skriftS6{
+    font-size: 17px;
+}
+#skriftS7{
+    font-size: 17px;
 }
 
 #problemstilling{
@@ -410,13 +420,13 @@ p{
 }
 
 html{
-	font-family: helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 	max-width: 100%;
 }
 
 a{
 	text-decoration: none;
-	font-family: helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
 /* Ting til navbar */
@@ -477,7 +487,7 @@ nav span{
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
-	font-family: Verdana,Geneva,sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
     margin-left: 5.5%;
 }
 
