--- a/stylesheet_alternativt.css
+++ b/stylesheet_alternativt.css
@@ -1,8 +1,15 @@
-﻿
-/* For pc-skjermer */
+﻿/* For pc-skjermer */
 
 * {
     box-sizing: border-box;
+}
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 body{
 	background-color: black;
@@ -19,7 +26,7 @@ table{
 
 a{
 	text-decoration: none;
-	font-family: helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
 li a{
@@ -27,11 +34,12 @@ li a{
 }
 
 p{
-	font-size: 15px;
+	font-size: 23px;
+    line-height: 1.5;
 }
 
 html{
-	font-family: helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 	max-width: 100%;
 }
 
@@ -47,17 +55,16 @@ td{
 	padding: 0% 2% 0% 2%;
 }
 
-
 td a{
 	width: 100%;
 }
-
 
 td h1{
 	text-decoration: none;
 	color: yellow;
 	text-align: center;
 }
+
 .navbar{
 	background-color: #2d2d2d;
 	position: fixed;
@@ -71,68 +78,243 @@ td h1{
 	float: left;
 }
 
+}
+#storKnapp1{
+}
+
+#storKnapp2{   
+}
+
+#storKnappJs1{
+    display: none;
+}
+
+#storKnappJs2{
+    display: none;
+}
+
 /* Ting til innhold */
 
 .overskrift{
 	font-size: 1000%;	
 	text-align: center;
+	background-color: yellow;
+	padding: 0% 5% 30% 5%;
+	display: block;
+	margin: 0;
+}
+.lastNedKnapper{
+    width: 50%;
+    
+}
+.tekstboks1{
+	background-color: black;
 	color: yellow;
 	padding: 20% 5% 30% 5%;
 	display: block;
 	margin: 0;
 }
-.right{
-    width: 50%;
-    float: left;
+
+.tekstboks2{
     
-}
-.left{
-    width: 50%;
-    float: left;
-}
-
-#tekstboks1{
-	background-color: black;
+	background-color: #444d5b;
 	color: yellow;
-	padding: 20% 5% 20% 5%;
-	display: block;
-	margin: 0;
-	border-bottom:12px;
-	border-bottom-style:solid; 
-	border-bottom-color:  yellow;
-}
-
-#tekstboks2{
-	background-color: black;
-	color: yellow;
-	padding: 20% 5% 20% 5%;
+	padding: 20% 5% 30% 5%;
 	display: block;
 	margin:0;
-	border-bottom:12px;
-	border-bottom-style:solid; 
-	border-bottom-color:  yellow;
 }
 
-#tekstboks3{
+.tekstboks3{
+    
 	background-color: black;
 	color: yellow;
-	padding: 20% 5% 20% 5%;
+    padding: 20% 5% 30% 5%;
 	display: block;
-	margin: 0;
-	border-bottom:12px;
-	border-bottom-style:solid; 
-	border-bottom-color:  yellow;
+	margin:0;
 }
 
-#testboks4{
-	background-color: black;
+.tekstboks4{
+    
+	background-color: #444d5b;
 	color: yellow;
-	padding: 20% 5% 20% 5%;
+	padding: 20% 5% 30% 5%;
 	display: block;
 	margin: 0;
-	border-bottom:12px;
-	border-bottom-style:solid; 
-	border-bottom-color:  yellow;
+}
+.appenBilde{
+    width: 100%;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: 100% 100%;
+    grid-gap: 30px;
+    
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.grid-container > div {
+   
+    text-align: left;
+    padding: 20px 20px;
+    font-size: 30px;
+    color: yellow;
+}
+
+.gif{
+    width: 70%;
+    display: block;
+    margin-bottom: auto;
+    
+    margin-right: auto;
+    margin-top: 35.1px;
+    border-radius: 10px;
+}
+.gifDiv{
+    margin: auto;
+}
+.appBilder{
+    margin: auto;
+    display: block;
+   
+}
+.appDiv{
+    margin: auto;
+}
+.someDiv{
+    margin: auto;
+}
+.listeDiv{
+    margin: auto;
+}
+
+#skriftSs{
+	font-size: 23px;
+	padding-top: 6%;
+}
+
+#skriftS{
+    font-size: 17px;
+    padding-top: 6%;
+}
+#skriftS2{
+    font-size: 17px;
+}
+#skriftS3{
+    font-size: 17px;
+}
+#skriftS4{
+    font-size: 17px;
+}
+#skriftS5{
+    font-size: 17px;
+    
+}
+
+#problemstilling{
+    text-align: left;
+}
+
+
+/* ting til slideshow */
+.forrige, .neste {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: yellow;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.neste {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.forrige:hover, .neste:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+.nummertxt {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active .dot:hover {
+  background-color: #717171;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+
+
+/* On smaller screens, decrease text size */
+
+@media only screen and (max-width: 300px) {
+
+.forrige .neste .text {font-size: 11px}
+}
+
+#jsAppBilde{
+    display: none;
+}
+
+.noJsBilder{
+    margin-top: 30px;
+    text-align: center;
+}
+
+#noJsBilde1{  
+}
+
+#noJsBilde2{  
+}
+
+#noJsBilde3{ 
 }
 
 .tekstBakgrunn{
@@ -142,45 +324,80 @@ td h1{
 	background-color: black;
 }
 
-/*Ting til footer*/
+
+
+/* Ting til footer */
+
+.grid-containerFooter{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: 100%; 
+    grid-gap: 20px;
+    
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    
+}
+
+.grid-containerFooter > div{
+    text-align: center;
+    
+    font-size: 30px;
+    color: yellow;
+}
 
 .footer{
-	height: 50%;
+	
 	width: 100%;
 	color: yellow;
 	background-color: #2d2d2d;
-	padding: 15% 0% 5% 0%;
-	margin: 0% 0% 0% 0%;
+    margin-bottom: 0;
+	
 }
 
-.copyright{
-	color: yellow;
-}
-	
-ol{
+ul{
 	display: block;
 	text-align: center;
+    padding-left: 0;
 }
 
 li{
 	display: inline-block;
 	text-decoration: none;
+    font-size: 17px;
+}
+
+.someKnapper{
+    padding-top: 35px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .someFB {
-	width: 20%;
+	width: 34px;
 }
+
 .someInsta {
-	width: 20%;
-	margin-right: 3%;
+	width: 34px;
+	
 }
+
 .someLinkedin {
-	width: 20%;
-	margin-right: 4%;
+	width: 34px;
+	
 }
+
 .someTwitter {
-	width: 20%;
+	width: 34px;
 }
+
+
+
+/*Ting til storTekst sider*/
+
+
 
 
 /*For mobil-enheter */
@@ -197,13 +414,13 @@ p{
 }
 
 html{
-	font-family: helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 	max-width: 100%;
 }
 
 a{
 	text-decoration: none;
-	font-family: helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
 /* Ting til navbar */
@@ -245,18 +462,17 @@ nav span{
 }
 
 .dropbtn: hover, .dropbtn:focus{
-	background-color:black;
+	background-color:#2980B9;
 }
 
 .dropdown-content{
 	display: none;
-	margin-top: 3.6%;
+	margin-top: 3.3%;
 	position: fixed;
 	width: 105%;
 	margin-left: -4.8%;	
 	z-index: 1;
 	background-color: #2d2d2d;
-	color:yellow;
 	text-align: left;   
 }
 
@@ -265,12 +481,13 @@ nav span{
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
-	font-family: Verdana,Geneva,sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
+    margin-left: 5.5%;
 }
 
 .dropdown-content a:hover {
-	background-color: black ;
-	color: yellow;
+	background-color: #ddd ;
+	color: black;
 }
 
 .dropdown:hover .dropdown-content {	
@@ -283,29 +500,16 @@ nav span{
 .overskrift{
 	font-size: 1000%;
 	text-align: center;
-	background-color: black;
-	color:yellow;
+	background-color: yellow;
 	padding: 20% 5% 20% 5%;
 	display: block;
 	margin: 0;
 }
 
-.right{
-    width: 50%;
-    float: left;
     
-}
-.left{
-    width: 50%;
-    float: left;
-    background-color: black;
-	color: yellow;
-	padding: 20% 5% 20% 5%;
-	display: block;
-	margin: 0;
-}
 
-#tekstboks1{
+
+.tekstboks1{
 	background-color: black;
 	color: yellow;
 	padding: 20% 5% 20% 5%;
@@ -314,15 +518,16 @@ nav span{
 	font-size: 15px;
 }
 
-#tekstboks2{
-	background-color: black;
+
+.tekstboks2{
+	background-color: #444d5b;
 	color: yellow;
 	padding: 20% 5% 40% 5%;
 	display: block;
 	margin:0;
 }
 
-#tekstboks3{
+.tekstboks3{
 	background-color: black;
 	color: yellow;
 	padding: 20% 5% 20% 5%;
@@ -330,19 +535,45 @@ nav span{
 	margin: 0;
 }
 
-#tekstboks4{
-	 background-color: black;
+
+.tekstboks4{
+	background-color: #444d5b;
 	color: yellow;
-	padding: 20% 5% 20% 5%;
+	padding: 20% 5% 5% 5%;
 	display: block;
-	margin: 0;
+	margin: 0; 
 }
+
+.grid-container{
+    display: hidden;
+}
+
+.gif{
+    width: 250px;
+    display: block;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 35.1px;
+    border-radius: 10px;
+}
+
+.appBilder{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 
 /* Ting til footer */
 
+.grid-containerFooter{
+    display: block;
+}
+
 
 .footer{
-	height: 50%;
+	
 	width: 100%;
 	color: yellow;
 	background-color: #2d2d2d;
@@ -350,17 +581,26 @@ nav span{
 	margin: 0% 0% 0% 0%;
 }
 
+.someKnapper{
+    padding-top: 10px;
+    
+}
+    
 .someFB {
-	width: 20%;
+	width: 34px;
 }
+
 .someInsta {
-	width: 20%;
-	margin-right: 3%;
+	width: 34px;
+	
 }
+
 .someLinkedin {
-	width: 20%;
-	margin-right: 4%;
+	width: 34px;
+	
 }
+
 .someTwitter {
-	width: 20%;
+	width: 34px;
+}
 }
