--- a/stylesheet.css
+++ b/stylesheet.css
@@ -507,6 +507,7 @@ li{
 	text-align: left;
 }
 
+
 /* Ting til innhold */
 
 .overskrift{
@@ -592,6 +593,11 @@ li{
 	padding: 5% 0% 5% 0%;
 	margin: 0% 0% 0% 0%;
 }
+
+.kildeliste, .designmanual{
+	text-align: center;
+}
+
 
 .someKnapper{
     padding-top: 10px;
